--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
    "version": "0.0.1",
    "icon": "resources/icon.png",
    "engines": {
-      "vscode": "^1.67.0"
+      "vscode": "^1.85.0"
    },
    "categories": [
       "Other"
@@ -24,38 +24,40 @@
       "*"
    ],
    "main": "./dist/extension.js",
-   "contributes": {},
+   "contributes": {
+      "commands": [
+         {
+            "command": "extension-name.helloWorld",
+            "title": "Hello World",
+            "category": "Extension Name"
+         }
+      ]
+   },
    "scripts": {
-      "vscode:prepublish": "npm run webpack:prod",
-      "webpack:dev": "webpack --mode development",
-      "webpack:prod": "webpack --mode production --devtool hidden-source-map",
-      "webpack:watch": "webpack --watch",
-      "watch": "npm run webpack:watch",
-      "tsc": "tsc -p ./",
-      "tsc:watch": "tsc -watch -p ./",
-      "test-compile": "run-p webpack:dev tsc",
-      "test-watch": "run-p webpack:watch tsc:watch",
-      "pretest": "npm run test-compile && npm run lint",
+      "vscode:prepublish": "npm run package",
+      "compile": "webpack",
+      "watch": "webpack --watch",
+      "package": "webpack --mode production --devtool hidden-source-map",
+      "compile-tests": "tsc -p . --outDir out",
+      "watch-tests": "tsc -p . -w --outDir out",
+      "pretest": "npm run compile-tests && npm run compile && npm run lint",
       "lint": "eslint src --ext ts",
-      "test": "node ./out/test/runTest.js"
+      "test": "vscode-test",
+      "deploy": "vsce publish --no-yarn"
    },
    "devDependencies": {
-      "@types/glob": "^7.1.3",
-      "@types/mocha": "^8.0.4",
-      "@types/node": "^12.11.7",
-      "@types/vscode": "^1.67.0",
-      "@typescript-eslint/eslint-plugin": "^4.14.1",
-      "@typescript-eslint/parser": "^4.14.1",
-      "eslint": "^7.19.0",
-      "mocha": "^8.2.1",
-      "npm-run-all": "^4.1.5",
-      "ts-loader": "^8.0.14",
-      "typescript": "^4.1.3",
-      "vscode-test": "^1.5.0",
-      "webpack": "^5.19.0",
-      "webpack-cli": "^4.4.0"
-   },
-   "dependencies": {
-      "node": "^16.4.0"
+      "@types/mocha": "^10.0.6",
+      "@types/node": "18.x",
+      "@types/vscode": "^1.85.0",
+      "@typescript-eslint/eslint-plugin": "^6.15.0",
+      "@typescript-eslint/parser": "^6.15.0",
+      "@vscode/test-cli": "^0.0.4",
+      "@vscode/test-electron": "^2.3.8",
+      "@vscode/vsce": "^2.22.0",
+      "eslint": "^8.56.0",
+      "ts-loader": "^9.5.1",
+      "typescript": "^5.3.3",
+      "webpack": "^5.89.0",
+      "webpack-cli": "^5.1.4"
    }
 }
