--- a/workflows/test.yaml
+++ b/workflows/test.yaml
@@ -1,12 +1,15 @@
-name: Test and Deploy
+name: Test
 
 on:
   push:
     branches:
       - master
+  release:
+    types:
+      - created
 
 jobs:
-  test-and-deploy:
+  test:
     strategy:
       matrix:
         os: [macos-latest, ubuntu-latest, windows-latest]
@@ -23,8 +26,4 @@ jobs:
       if: runner.os == 'Linux'
     - run: npm test
       if: runner.os != 'Linux'
-    - name: Publish
-      if: success() && startsWith(github.ref, 'refs/tags/') && matrix.os == 'ubuntu-latest'
-      run: npm run deploy
-      env:
-        VSCE_PAT: ${{ secrets.VSCE_PAT }}
+
