--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -17,12 +17,19 @@ jobs:
         with:
           node-version: 20.x
       - run: npm install
-      - run: xvfb-run -a npm test
-        if: runner.os == 'Linux'
-      - run: npm test
-        if: runner.os != 'Linux'
-      - name: Publish
-        if: success() && startsWith(github.ref, 'refs/tags/')
-        run: npm run deploy
-        env:
-          VSCE_PAT: ${{ secrets.VSCE_PAT }}
+      - name: Test
+        id: test
+        run: ${{ runner.os == 'Linux' && 'xvfb-run -a ' || '' }}npm test
+      - name: Publish to Open VSX Registry
+        continue-on-error: true
+        uses: HaaLeo/publish-vscode-extension@v1
+        with:
+          pat: ${{ secrets.OPEN_VSX_TOKEN }}
+        if: steps.test.outcome == 'success' && startsWith(github.ref, 'refs/tags/')
+      - name: Publish to Visual Studio Marketplace
+        continue-on-error: true
+        uses: HaaLeo/publish-vscode-extension@v1
+        with:
+          pat: ${{ secrets.VS_MARKETPLACE_TOKEN }}
+          registryUrl: https://marketplace.visualstudio.com
+        if: steps.test.outcome == 'success' && startsWith(github.ref, 'refs/tags/')
