--- a/.vscodeignore
+++ b/.vscodeignore
@@ -8,7 +8,7 @@ src/**
 webpack.config.js
 vsc-extension-quickstart.md
 **/tsconfig.json
-**/.eslintrc.json
 **/*.map
 **/*.ts
 **/.vscode-test.*
+biome.json
