--- a/package.json
+++ b/package.json
@@ -40,21 +40,18 @@
       "package": "webpack --mode production --devtool hidden-source-map",
       "compile-tests": "tsc -p . --outDir out",
       "watch-tests": "tsc -p . -w --outDir out",
-      "pretest": "npm run compile-tests && npm run compile && npm run lint",
-      "lint": "eslint src --ext ts",
+      "pretest": "npm run compile-tests && npm run compile",
       "test": "vscode-test",
       "deploy": "vsce publish --no-yarn"
    },
    "devDependencies": {
+      "@biomejs/biome": "^1.9.4",
       "@types/mocha": "^10.0.10",
       "@types/node": "20.x",
       "@types/vscode": "^1.96.0",
-      "@typescript-eslint/eslint-plugin": "^6.15.0",
-      "@typescript-eslint/parser": "^6.15.0",
       "@vscode/test-cli": "^0.0.10",
       "@vscode/test-electron": "^2.4.1",
       "@vscode/vsce": "^2.22.0",
-      "eslint": "^8.56.0",
       "ts-loader": "^9.5.1",
       "typescript": "^5.7.2",
       "webpack": "^5.95.0",
