--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
       "@vscode/test-cli": "^0.0.10",
       "@vscode/test-electron": "^2.4.1",
       "@vscode/vsce": "^2.22.0",
+      "lefthook": "^1.10.10",
       "ts-loader": "^9.5.1",
       "typescript": "^5.7.2",
       "webpack": "^5.95.0",
